--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,8 +4,20 @@
 
   <div class="side-bar">
     <div class="side-bar-header">
+      <div class="user-name">
+      <a href="#">Tom</a>
+      </div>
+      <div class="edit-btn">
+        <a href="#">チャットを作成する</a>
+      </div>
     </div>
     <div class="rooms">
+      <div class="room">
+        <div class="room-name"><a href="#">techroom1</a></div>
+      </div>
+      <div class="room">
+        <div class="room-name"><a href="#">techroom2</a></div>
+      </div>
     </div>
   </div>
   <div class= "chat">
