--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -49,16 +49,88 @@
 }
 .chat-header{
   height: 100px;
-  background-color: #ffffff;
-  padding: 0 40px;
+  padding: 0px 40px;
+  display: flex;
+  justify-content: space-between;
+}
+.chat-name {
+  font-size: 24px;
+  color: #333;
+  margin-top: 36px;
+}
+.finish-btn{
+  margin-top: 40px;
+}
+.finish-btn a{
+  border: 1px solid darkred;
+  color: darkred;
+  padding: 20px;
+  text-decoration: none;
 }
 .messages{
   height: calc(100vh - 100px - 90px);
   background-color: #FAFAFAFA;
   padding: 46px 40px 0;
+  overflow: scroll;
+}
+.message{
+  margin: 10px 0 0 0;
+}
+.upper-message{
+  display: flex;
+}
+.message-user{
+  font-size: 16px;
+  color: #434A54;
+}
+.message-date{
+  font-size: 12px;
+  color: #999;
+  padding-left: 10px;
+}
+.lower-message{
+  margin-top: 10px;
+}
+.message-content{
+  font-size: 14px;
+  color: #434A54;
+  margin-bottom: 40px;
 }
 .form{
   height: 90px;
   background-color: #DDDDDD;
   padding: 20px 40px;
+  display: flex;
+}
+.form-input{
+  background-color: white;
+  width: 100%;
+  display: flex;
+}
+.form-message{
+  border: none;
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
+}
+.form-submit{
+  border: none;
+  height: 50px; 
+  padding: 0 20px;
+  margin-left: 15px;
+  font-size: 16px;
+  background-color: #38AEF0;
+  color: white;
+}
+.form-image{
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+.hidden{
+  display: none;
 }
