チャット画面フロントの実装

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -47,7 +47,7 @@
   <div class="form">
     <div class="form-input">
       <input class="form-message" placeholder= "type a message">
-      <label class="image">
+      <label class="form-image">
         <span class="image-file">画像</span>
         <input type="file" class="hidden">
       </label>
