--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -12,37 +12,7 @@
     </div>
   </div>
   <div class="messages">
-    <div class="message">
-      <div class="upper-message">
-        <div class="message-user">
-          Tom
-        </div>
-        <div class="message-date">
-          2021/01/27(WED) 12:30:00
-        </div>
-      </div>
-      <div class="lower-message">
-        <div class="message-content">
-          おはよう
-        </div>
-      </div>
-    </div>
-
-    <div class="message">
-      <div class="upper-message">
-        <div class="message-user">
-          Sam
-        </div>
-        <div class="message-date">
-          2021/01/27(WED) 01:30:40
-        </div>
-      </div>
-      <div class="lower-message">
-        <div class="message-content">
-          よろしくおねがいします
-        </div>
-      </div>
-    </div>
+    <%= render partial: 'message', collection: @messages %>
   </div>  
   <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
     <div class="form-input">
