--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -2,7 +2,7 @@
   <div class="chat-header">
     <div class="chat-header-left">
       <div class="chat-name">
-        hogefuga
+        <%= @room.name %>
       </div>
     </div>
     <div class="chat-header-rigt">
